# opengl-3d-engine

./: CMakeLists.txt  fragment.frag  glad.c  main.c  mesh.c  mesh.h  test.c
glad/: glad.h
